; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_avf_showcqt.c_b_weighting.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_avf_showcqt.c_b_weighting.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (double (i8*, double)* @b_weighting to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @b_weighting(i8* %0, double %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca double, align 8
  %5 = alloca double, align 8
  store i8* %0, i8** %3, align 8
  store double %1, double* %4, align 8
  %6 = load double, double* %4, align 8
  %7 = load double, double* %4, align 8
  %8 = fmul double %6, %7
  %9 = load double, double* %4, align 8
  %10 = fmul double %8, %9
  %11 = fmul double 1.488400e+08, %10
  store double %11, double* %5, align 8
  %12 = load double, double* %4, align 8
  %13 = load double, double* %4, align 8
  %14 = fmul double %12, %13
  %15 = fadd double %14, 0x407A85C28F5C28F7
  %16 = load double, double* %4, align 8
  %17 = load double, double* %4, align 8
  %18 = fmul double %16, %17
  %19 = fadd double %18, 1.488400e+08
  %20 = fmul double %15, %19
  %21 = load double, double* %4, align 8
  %22 = load double, double* %4, align 8
  %23 = fmul double %21, %22
  %24 = fadd double %23, 0x40D8889000000000
  %25 = call double @sqrt(double %24) #2
  %26 = fmul double %20, %25
  %27 = load double, double* %5, align 8
  %28 = fdiv double %27, %26
  store double %28, double* %5, align 8
  %29 = load double, double* %5, align 8
  ret double %29
}

; Function Attrs: nounwind
declare dso_local double @sqrt(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
